--- a/static/styles.css
+++ b/static/styles.css
@@ -217,6 +217,7 @@ input.switch:checked::before {
 .table td {
   padding: 0.5rem;
   border: 1px solid var(--ultra-highlight);
+  word-break: break-word;
 }
 
 .table.is-narrow th,
@@ -280,6 +281,8 @@ input.switch:checked::before {
   height: auto;
   white-space: normal;
   padding: 0.25rem 0.75rem;
+  min-width: 0;
+  line-height: 1.2;
 }
 
 .tab-buttons .mdc-button.is-active {
