--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
   <div class="column is-half mb-5">
     <div class="mdc-card">
       <header class="card-header">
-        <p class="card-header-title">Status</p>
+        <p class="card-header-title">📊 Status</p>
       </header>
       <div class="card-content p-0">
         <table class="table is-fullwidth">
@@ -25,7 +25,7 @@
   <div class="column is-half mb-5">
     <div class="mdc-card">
       <header class="card-header">
-        <p class="card-header-title">SKU summary</p>
+        <p class="card-header-title">🛒 SKU summary</p>
       </header>
       <div class="card-content p-0">
         <table class="table is-fullwidth is-narrow">
