--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
           <a class="mdc-button" href="/">Dashboard</a>
           <a class="mdc-button" href="/upload">Upload data</a>
           <a class="mdc-button" href="/sku-map">SKU map</a>
+          <a class="mdc-button" href="/sku-details">SKU details</a>
           <a class="mdc-button" href="/monthly-report">Reports</a>
           <a class="mdc-button" href="/debug">Debug</a>
           <a class="mdc-button" href="/settings">Settings</a>
