--- a/templates/sku_details.html
+++ b/templates/sku_details.html
@@ -29,8 +29,8 @@
         <label class="label">Date</label>
         <button id="datePickerBtn" type="button" class="mdc-button">All</button>
         <input type="hidden" name="period" id="periodInput" value="{{ period }}">
-        <input type="hidden" name="start" id="startInput" value="{{ start }}">
-        <input type="hidden" name="end" id="endInput" value="{{ end }}">
+        <input type="hidden" name="start" id="startInput" value="{{ start or '' }}">
+        <input type="hidden" name="end" id="endInput" value="{{ end or '' }}">
       </div>
       <div class="field">
         <button class="mdc-button mdc-button--raised" type="submit">Filter</button>
@@ -53,7 +53,32 @@
             <input type="date" id="dayInput" class="input">
           </div>
           <div id="pane-month" class="date-pane is-hidden">
-            <input type="month" id="monthInput2" class="input">
+            <div class="is-flex is-align-items-center">
+              <div class="select mr-2">
+                <select id="monthSelect">
+                  <option value="">Month</option>
+                  <option value="01">Jan</option>
+                  <option value="02">Feb</option>
+                  <option value="03">Mar</option>
+                  <option value="04">Apr</option>
+                  <option value="05">May</option>
+                  <option value="06">Jun</option>
+                  <option value="07">Jul</option>
+                  <option value="08">Aug</option>
+                  <option value="09">Sep</option>
+                  <option value="10">Oct</option>
+                  <option value="11">Nov</option>
+                  <option value="12">Dec</option>
+                </select>
+              </div>
+              <div class="select">
+                <select id="monthYearSelect">
+                  {% for y in years %}
+                  <option value="{{ y }}">{{ y }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
           </div>
           <div id="pane-year" class="date-pane is-hidden">
             <div class="select">
@@ -139,7 +164,8 @@
     var startInput = document.getElementById('startInput');
     var endInput = document.getElementById('endInput');
     var dayInput = document.getElementById('dayInput');
-    var monthInput = document.getElementById('monthInput2');
+    var monthSelect = document.getElementById('monthSelect');
+    var monthYearSelect = document.getElementById('monthYearSelect');
     var yearSelect = document.getElementById('yearSelect2');
     var startRange = document.getElementById('startInput2');
     var endRange = document.getElementById('endInput2');
@@ -154,7 +180,8 @@
     } else if(init.startsWith('month-')){
       activeType = 'month';
       var p = init.split('-');
-      monthInput.value = p[1] + '-' + p[2];
+      monthYearSelect.value = p[1];
+      monthSelect.value = p[2];
     } else if(init === 'custom' && startInput.value && endInput.value){
       if(startInput.value === endInput.value){
         activeType = 'day';
@@ -195,8 +222,8 @@
     function setButtonLabel(){
       if(activeType === 'day' && dayInput.value){
         btn.textContent = dayInput.value;
-      } else if(activeType === 'month' && monthInput.value){
-        btn.textContent = monthInput.value;
+      } else if(activeType === 'month' && monthYearSelect.value && monthSelect.value){
+        btn.textContent = monthYearSelect.value + '-' + monthSelect.value;
       } else if(activeType === 'year' && yearSelect.value){
         btn.textContent = yearSelect.value;
       } else if(activeType === 'range' && (startRange.value || endRange.value)){
@@ -211,9 +238,8 @@
         periodInput.value = 'custom';
         startInput.value = dayInput.value;
         endInput.value = dayInput.value;
-      } else if(activeType === 'month' && monthInput.value){
-        var parts = monthInput.value.split('-');
-        periodInput.value = 'month-' + parts[0] + '-' + parts[1];
+      } else if(activeType === 'month' && monthYearSelect.value && monthSelect.value){
+        periodInput.value = 'month-' + monthYearSelect.value + '-' + monthSelect.value;
         startInput.value = '';
         endInput.value = '';
       } else if(activeType === 'year' && yearSelect.value){
