--- a/templates/sku_details.html
+++ b/templates/sku_details.html
@@ -111,6 +111,7 @@
       </div>
     </div>
     {% if sku %}
+    <div class="table-responsive">
     <table class="table is-fullwidth is-striped is-narrow mb-4">
       <thead>
         <tr><th>Source</th><th>Quantity</th><th>Total $</th></tr>
@@ -132,6 +133,8 @@
         {% endif %}
       </tbody>
     </table>
+    </div>
+    <div class="table-responsive">
     <table class="table is-fullwidth is-striped is-narrow">
       <thead>
         <tr>
@@ -152,6 +155,7 @@
         {% endfor %}
       </tbody>
     </table>
+    </div>
     {% endif %}
   </div>
 </div>
