--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
   </div>
 </header>
 <section class="section pt-0">
-  <div class="container">
+  <div class="container page-content">
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       <div class="notification">{{ messages[0] }}</div>
