--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,7 @@
         <p class="card-header-title">📊 Status</p>
       </header>
       <div class="card-content p-0">
+        <div class="table-responsive">
         <table class="table is-fullwidth">
           <thead><tr><th>Source</th><th>Last Uploaded</th></tr></thead>
           <tbody>
@@ -19,6 +20,7 @@
           {% endfor %}
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
@@ -28,6 +30,7 @@
         <p class="card-header-title">🛒 SKU summary</p>
       </header>
       <div class="card-content p-0">
+        <div class="table-responsive">
         <table class="table is-fullwidth is-narrow">
           <thead><tr><th>Type</th><th># of SKUs</th></tr></thead>
           <tbody>
@@ -36,6 +39,7 @@
           {% endfor %}
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
