--- a/templates/debug.html
+++ b/templates/debug.html
@@ -4,6 +4,7 @@
 <div class="mdc-card">
   <div class="card-content">
     <h2 class="title is-4">Debug summary: transactions by month</h2>
+    <div class="table-responsive">
     <table class="table is-fullwidth is-bordered">
     <thead>
       <tr><th>Month</th><th>Transaction Count</th><th>Total Amount</th></tr>
@@ -18,6 +19,7 @@
     {% endfor %}
     </tbody>
     </table>
+    </div>
   </div>
 </div>
 {% endblock %}
