--- a/templates/sku_summary.html
+++ b/templates/sku_summary.html
@@ -3,6 +3,7 @@
 <div class="mdc-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU details: {{ sku }}</h2>
+    <div class="table-responsive">
     <table class="table is-fullwidth is-striped is-narrow">
       <thead>
         <tr><th>Source</th><th>Quantity</th><th>Total $</th></tr>
@@ -20,6 +21,7 @@
         </tr>
       </tbody>
     </table>
+    </div>
     <a class="mdc-button" href="{{ url_for('monthly_report') }}">&larr; Back to report</a>
   </div>
 </div>
