--- a/templates/debug.html
+++ b/templates/debug.html
@@ -1,7 +1,7 @@
 
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4">Debug summary: transactions by month</h2>
     <div class="table-responsive">
