--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content report-content">
     <h2 class="title is-4">Reports</h2>
     <form method="get" class="mb-4">
