--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU alias mapping</h2>
     <nav class="buttons tab-buttons mb-4" id="mapTabs">
