--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="columns">
   <div class="column is-half mb-5">
-    <div class="mdc-card">
+    <div class="mdc-card page-card">
       <header class="card-header">
         <p class="card-header-title">📊 Status</p>
       </header>
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="column is-half mb-5">
-    <div class="mdc-card">
+    <div class="mdc-card page-card">
       <header class="card-header">
         <p class="card-header-title">🛒 SKU summary</p>
       </header>
