--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">Settings</h2>
     <p>No settings available.</p>
