--- a/templates/sku_details.html
+++ b/templates/sku_details.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU drilldown</h2>
     <form method="get" class="mb-4 filter-form">
