--- a/templates/sku_summary.html
+++ b/templates/sku_summary.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="mdc-card">
+<div class="mdc-card page-card">
   <div class="card-content">
     <h2 class="title is-4 mb-4">SKU details: {{ sku }}</h2>
     <div class="table-responsive">
